tests/negative/test_expr_asgn_cn.orb
fnc main () () {
    sym (x:(i32 cn) 100);
    = x (+ x 1);
};